--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "n/a",
   "scripts": {
     "develop": "yarn run clean && gatsby develop",
-    "build": "yarn run clean && gatsby build",
-    "deploy": "(git add . && git commit -m \"pub\" && git push)",
-    "__deploy": "yarn run clean && gatsby build --prefix-paths && gh-pages -d public",
     "clean": "rimraf .cache public",
+    "build": "yarn run clean && gatsby build",
+    "deploy:build": "gatsby build --prefix-paths",
+    "deploy:init": "mkdir -p public && (cd public && git init && git remote add origin git@github.com:marcopeg/marcopeg.github.io.git)",
+    "deploy:commit": "(cd public && git add . && git commit -m \"pub\" && git push --force -u origin master)",
+    "deploy": "yarn run clean && yarn deploy:init && yarn deploy:build && yarn deploy:commit",
     "lint:js": "eslint --cache --ext .js,.jsx --ignore-pattern public .",
     "lint:scss": "stylelint \"src/**/*.scss\"",
     "lint": "concurrently \"yarn run lint:js\" \"yarn run lint:scss\"",
