--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "develop": "yarn run clean && gatsby develop",
     "clean": "rimraf .cache public",
     "build": "yarn run clean && gatsby build",
-    "deploy:build": "gatsby build --prefix-paths",
-    "deploy:init": "mkdir -p public && (cd public && git init && git remote add origin git@github.com:marcopeg/marcopeg.github.io.git)",
-    "deploy:commit": "(cd public && git add . && git commit -m \"pub\" && git push --force -u origin master)",
-    "deploy": "yarn run clean && yarn deploy:init && yarn deploy:build && yarn deploy:commit",
+    "deploy:build": "yarn run clean && gatsby build --prefix-paths && cp README.md ./public",
+    "deploy:git:init": "(cd public && git init && git remote add origin git@github.com:marcopeg/marcopeg.github.io.git)",
+    "deploy:git:commit": "(cd public && git add . && git commit -m \"pub\" && git push --force -u origin master)",
+    "deploy": "yarn deploy:build &&  yarn deploy:git:init && yarn deploy:git:commit",
     "lint:js": "eslint --cache --ext .js,.jsx --ignore-pattern public .",
     "lint:scss": "stylelint \"src/**/*.scss\"",
     "lint": "concurrently \"yarn run lint:js\" \"yarn run lint:scss\"",
