--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
     "develop": "yarn run clean && gatsby develop",
     "clean": "rimraf .cache public",
     "build": "yarn run clean && gatsby build",
-    "deploy:build": "yarn run clean && gatsby build --prefix-paths && cp README.md ./public",
-    "deploy:git:init": "(cd public && git init && git remote add origin git@github.com:marcopeg/marcopeg.github.io.git)",
-    "deploy:git:commit": "(cd public && git add . && git commit -m \"pub\" && git push --force -u origin master)",
-    "deploy": "yarn deploy:build &&  yarn deploy:git:init && yarn deploy:git:commit",
     "lint:js": "eslint --cache --ext .js,.jsx --ignore-pattern public .",
     "lint:scss": "stylelint \"src/**/*.scss\"",
     "lint": "concurrently \"yarn run lint:js\" \"yarn run lint:scss\"",
     "test": "jest --config ./tests/jest-config.js",
     "test:coverage": "jest --coverage --config ./tests/jest-config.js",
-    "test:watch": "jest --watch --config ./tests/jest-config.js"
+    "test:watch": "jest --watch --config ./tests/jest-config.js",
+    "---// DEPLOY //---": "",
+    "deploy:build": "yarn run clean && gatsby build --prefix-paths && cp README.md ./public",
+    "deploy:git:init": "(cd public && git init && git remote add origin git@github.com:marcopeg/marcopeg.github.io.git)",
+    "deploy:git:commit": "(cd public && git add . && git commit -m \"pub\" && git push --force -u origin master)",
+    "deploy": "yarn deploy:build &&  yarn deploy:git:init && yarn deploy:git:commit"
   },
   "repository": "https://github.com/alxshelepenok/gatsby-starter-lumen",
   "author": "Alexander Shelepenok <alxshelepenok@gmail.com>",
