--- a/package.json
+++ b/package.json
@@ -41,29 +41,28 @@
     "disqus"
   ],
   "dependencies": {
-    "classnames": "^2.2.6",
     "bluebird": "^3.5.2",
+    "classnames": "^2.2.6",
     "codecov": "^3.1.0",
-    "netlify-cms": "^2.3.3",
-    "node-sass": "^4.11.0",
     "gatsby": "^2.0.116",
     "gatsby-link": "^2.0.10",
     "gatsby-plugin-catch-links": "^2.0.10",
     "gatsby-plugin-feed": "^2.0.13",
     "gatsby-plugin-google-analytics": "^2.0.13",
+    "gatsby-plugin-manifest": "^2.0.17",
     "gatsby-plugin-netlify": "^2.0.9",
     "gatsby-plugin-netlify-cms": "^3.0.12",
-    "gatsby-plugin-manifest": "^2.0.17",
     "gatsby-plugin-offline": "^2.0.22",
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-sass": "^2.0.10",
     "gatsby-plugin-sharp": "^2.0.20",
     "gatsby-plugin-sitemap": "^2.0.5",
+    "gatsby-plugin-typography": "^2.2.7",
     "gatsby-remark-copy-linked-files": "^2.0.9",
     "gatsby-remark-images": "^3.0.3",
     "gatsby-remark-prismjs": "^3.2.4",
-    "gatsby-remark-responsive-iframe": "^2.0.9",
     "gatsby-remark-relative-images": "^0.2.1",
+    "gatsby-remark-responsive-iframe": "^2.0.9",
     "gatsby-remark-smartypants": "^2.0.8",
     "gatsby-source-filesystem": "^2.0.20",
     "gatsby-transformer-remark": "^2.2.4",
@@ -71,41 +70,48 @@
     "invariant": "^2.2.4",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
+    "netlify-cms": "^2.3.3",
+    "node-sass": "^4.11.0",
     "normalize-scss": "^7.0.1",
     "prismjs": "^1.15.0",
     "react": "^16.8.1",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.8.1",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-typography": "^0.16.18",
+    "typography": "^0.16.18",
+    "typography-theme-bootstrap": "^0.16.18",
+    "typography-theme-grand-view": "^0.16.18",
+    "typography-theme-irving": "^0.16.18"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
     "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.4.6",
     "babel-core": "^7.0.0-0",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
-    "identity-obj-proxy": "^3.0.0",
-    "react-test-renderer": "^16.8.1",
-    "jest": "^23.6.0",
-    "jest-cli": "^23.6.0",
-    "rimraf": "^2.6.3",
+    "browserslist": "^4.4.1",
     "concurrently": "^4.1.0",
-    "stylelint": "^9.10.1",
-    "stylelint-scss": "^3.5.1",
-    "stylelint-config-recommended-scss": "^3.2.0",
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^22.1.3",
     "eslint-plugin-react": "^7.12.4",
     "eslint-watch": "^4.0.2",
-    "babel-eslint": "^10.0.1",
     "gh-pages": "^2.0.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^23.6.0",
+    "jest-cli": "^23.6.0",
     "lost": "^8.3.1",
     "postcss-pxtorem": "^4.0.1",
-    "autoprefixer": "^9.4.6",
-    "browserslist": "^4.4.1"
+    "react-test-renderer": "^16.8.1",
+    "rimraf": "^2.6.3",
+    "stylelint": "^9.10.1",
+    "stylelint-config-recommended-scss": "^3.2.0",
+    "stylelint-scss": "^3.5.1"
   }
 }
