--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "node-sass": "^4.11.0",
     "normalize-scss": "^7.0.1",
     "prismjs": "^1.15.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.1",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.8.1",
