--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "develop": "yarn run clean && gatsby develop",
     "clean": "rimraf .cache public",
     "build": "yarn run clean && gatsby build",
+    "serve": "yarn build && ./node_modules/.bin/http-server ./public",
     "lint:js": "eslint --cache --ext .js,.jsx --ignore-pattern public .",
     "lint:scss": "stylelint \"src/**/*.scss\"",
     "lint": "concurrently \"yarn run lint:js\" \"yarn run lint:scss\"",
@@ -104,6 +105,7 @@
     "eslint-plugin-react": "^7.12.4",
     "eslint-watch": "^4.0.2",
     "gh-pages": "^2.0.1",
+    "http-server": "^0.11.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
