--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A minimal, lightweight and mobile-first starter for creating blazing-fast static blogs",
   "main": "n/a",
   "scripts": {
-    "develop": "yarn run clean && gatsby develop",
+    "develop": "yarn run clean && gatsby develop --host 0.0.0.0",
     "start": "yarn develop",
     "clean": "rimraf .cache public",
     "build": "yarn run clean && gatsby build",
@@ -16,7 +16,7 @@
     "test:coverage": "jest --coverage --config ./tests/jest-config.js",
     "test:watch": "jest --watch --config ./tests/jest-config.js",
     "---// DEPLOY //---": "",
-    "deploy:build": "yarn run clean && gatsby build --prefix-paths && cp README.md ./public && cp CNAME ./public",
+    "deploy:build": "yarn run clean && gatsby build --prefix-paths && cp README.md ./public",
     "deploy:git:init": "(cd public && git init && git remote add origin git@github.com:marcopeg/marcopeg.github.io.git)",
     "deploy:git:commit": "(cd public && git add . && git commit -m \"pub\" && git push --force -u origin master)",
     "deploy": "yarn deploy:build &&  yarn deploy:git:init && yarn deploy:git:commit"
