--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "test:watch": "jest --watch --config ./tests/jest-config.js",
     "---// DEPLOY //---": "",
     "deploy:build": "yarn run clean && gatsby build --prefix-paths && cp README.md ./public",
-    "deploy:git:init": "(cd public && git init && git remote add origin https://github.com/marcopeg/marcopeg.github.io.git)",
+    "deploy:git:init:https": "(cd public && git init && git remote add origin https://github.com/marcopeg/marcopeg.github.io.git)",
+    "deploy:git:init:ssh": "(cd public && git init && git remote add origin git@github.com:marcopeg/marcopeg.github.io.git)",
     "deploy:git:commit": "(cd public && git add . && git commit -m \"pub\" && git push --force -u origin master)",
-    "deploy": "yarn deploy:build &&  yarn deploy:git:init && yarn deploy:git:commit"
+    "deploy:https": "yarn deploy:build &&  yarn deploy:git:init:https && yarn deploy:git:commit",
+    "deploy:ssh": "yarn deploy:build &&  yarn deploy:git:init:ssh && yarn deploy:git:commit",
+    "deploy": "yarn deploy:https"
   },
   "repository": "https://github.com/alxshelepenok/gatsby-starter-lumen",
   "author": "Alexander Shelepenok <alxshelepenok@gmail.com>",
