--- a/package.json
+++ b/package.json
@@ -4,18 +4,17 @@
   "description": "A minimal, lightweight and mobile-first starter for creating blazing-fast static blogs",
   "main": "n/a",
   "scripts": {
-    "develop": "yarn run clean && gatsby develop --host 0.0.0.0",
-    "start": "yarn develop",
+    "start": "npm run clean && gatsby develop --host 0.0.0.0",
     "clean": "rimraf .cache public",
-    "build": "yarn run clean && gatsby build",
-    "serve": "yarn build && ./node_modules/.bin/http-server ./public",
+    "build": "npm run clean && gatsby build",
+    "serve": "npm run build && ./node_modules/.bin/http-server ./public",
     "lint:js": "eslint --cache --ext .js,.jsx --ignore-pattern public .",
     "lint:scss": "stylelint \"src/**/*.scss\"",
     "lint": "concurrently \"yarn run lint:js\" \"yarn run lint:scss\"",
     "test": "jest --config ./tests/jest-config.js",
     "test:coverage": "jest --coverage --config ./tests/jest-config.js",
     "test:watch": "jest --watch --config ./tests/jest-config.js",
-    "---// DEPLOY //---": "",
+    "---// GITHUB DEPLOY //---": "",
     "deploy:build": "yarn run clean && gatsby build --prefix-paths && cp README.md ./public",
     "deploy:git:init:https": "(cd public && git init && git remote add origin https://github.com/marcopeg/marcopeg.github.io.git)",
     "deploy:git:init:ssh": "(cd public && git init && git remote add origin git@github.com:marcopeg/marcopeg.github.io.git)",
