--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "gatsby-plugin-sharp": "^2.6.25",
     "gatsby-plugin-sitemap": "^2.4.11",
     "gatsby-plugin-typography": "^2.5.10",
+    "gatsby-remark-autolink-headers": "^2.3.15",
     "gatsby-remark-copy-linked-files": "^2.3.12",
     "gatsby-remark-embed-video": "^2.0.1",
     "gatsby-remark-images": "^3.3.25",
