--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,9 +1,14 @@
-ports:
-  - port: 8000
+
 tasks:
   - init: npm install
     command: npm start
     openIn: bottom
+
+ports:
+  - port: 8000
+    onOpen: open-preview
+  - port: 9229
+    onOpen: ignore
 
 vscode:
   extensions:
