milestone 1 : update outdated dependencies and Improve start time

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "netlify-cms": "^2.10.55",
     "node-sass": "^4.14.1",
     "normalize-scss": "^7.0.1",
+    "npm": "^6.14.10",
     "prismjs": "^1.21.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -92,22 +93,22 @@
     "typography-theme-irving": "^0.16.18"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-react": "^7.10.4",
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
     "autoprefixer": "^9.8.6",
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^23.6.0",
-    "browserslist": "^4.14.0",
+    "browserslist": "^4.16.0",
     "concurrently": "^4.1.0",
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^22.1.3",
-    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react": "^7.21.5",
     "eslint-watch": "^4.0.2",
     "gh-pages": "^2.2.0",
     "http-server": "^0.11.1",
@@ -116,7 +117,7 @@
     "jest-cli": "^23.6.0",
     "lost": "^8.3.1",
     "postcss-pxtorem": "^4.0.1",
-    "react-test-renderer": "^16.13.1",
+    "react-test-renderer": "^16.14.0",
     "rimraf": "^2.6.3",
     "stylelint": "^9.10.1",
     "stylelint-config-recommended-scss": "^3.2.0",
