Tag-Cloud with clickable Link

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.18",
+    "react-wordcloud": "^1.2.7",
     "typography": "^0.16.18",
     "typography-theme-bootstrap": "^0.16.18",
     "typography-theme-grand-view": "^0.16.18",
